data collector alpha version

--- a/NeuralNetwork.vcxproj
+++ b/NeuralNetwork.vcxproj
@@ -64,11 +64,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataCollector.cpp" />
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataCollector.h" />
     <ClInclude Include="Interface.h" />
     <ClInclude Include="Network.h" />
   </ItemGroup>
