--- a/NeuralNetwork.vcxproj.filters
+++ b/NeuralNetwork.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="DataCollector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ProteinData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DataCollector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ProteinData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
