OutputManager class prototype with test results file writing

--- a/NeuralNetwork.vcxproj
+++ b/NeuralNetwork.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="DataCollector.cpp" />
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Network.cpp" />
+    <ClCompile Include="OutputManager.cpp" />
     <ClCompile Include="ProteinData.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
@@ -74,6 +75,7 @@
     <ClInclude Include="DataCollector.h" />
     <ClInclude Include="Interface.h" />
     <ClInclude Include="Network.h" />
+    <ClInclude Include="OutputManager.h" />
     <ClInclude Include="ProteinData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
