--- a/NeuralNetwork.vcxproj.filters
+++ b/NeuralNetwork.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ProteinData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OutputManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ProteinData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OutputManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
