Assigned fragments of code into separate methods + files validity checking added +  .txt files in root folder are now ignored (accidental output files)

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 _[Rr]esults/
 _[Ss]tats/
 
+# Project data files created accidentally in root folder
+./*.txt
+
 # User-specific files
 *.suo
 *.user
