--- a/NeuralNetwork.vcxproj
+++ b/NeuralNetwork.vcxproj
@@ -66,6 +66,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CrossValidation.cpp" />
     <ClCompile Include="DataCollector.cpp" />
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="Network.cpp" />
@@ -74,6 +75,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CrossValidation.h" />
     <ClInclude Include="DataCollector.h" />
     <ClInclude Include="Interface.h" />
     <ClInclude Include="Network.h" />
