--- a/NeuralNetwork.vcxproj.filters
+++ b/NeuralNetwork.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="OutputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CrossValidation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OutputManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CrossValidation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
