XML Header and Attributes parsing

--- a/Data/network.config
+++ b/Data/network.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Network Alpha="3" Beta="1" Eta="4">
-	<InputLayer Neurons="3"/>
-	<HiddenLayer Neurons="7">
-	<OutputLayer Neurons="1">
+<Network Alpha="3" Beta="1" Eta="4" Iterations="10">
+	<InputLayer Neurons="3" />
+	<HiddenLayer Neurons="7" />
+	<OutputLayer Neurons="1" />
 </Network>
