--- a/NeuralNetwork.vcxproj
+++ b/NeuralNetwork.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="OutputManager.cpp" />
     <ClCompile Include="ProteinData.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Utilities.cpp" />
     <ClCompile Include="XMLParser.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +90,7 @@
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="OutputManager.h" />
     <ClInclude Include="ProteinData.h" />
+    <ClInclude Include="Utilities.h" />
     <ClInclude Include="XMLParser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
