--- a/Data/network.config
+++ b/Data/network.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Network Alpha="0.0" Beta="0.7" Eta="0.04" Iterations="10" Normalize="false">
+<Network Alpha="0.0" Beta="0.7" Eta="0.04" Iterations="10" Normalize="true">
   <InputLayer Neurons="3" />
   <HiddenLayer Neurons="7" />
   <HiddenLayer Neurons="5" />
