Formatting fixes. Code clean up.

--- a/NeuralNetwork.vcxproj
+++ b/NeuralNetwork.vcxproj
@@ -45,7 +45,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/D_VERBOSE /c </AdditionalOptions>
+      <AdditionalOptions>/D__VERBOSE /D__PRINT_ALL  /c </AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -59,7 +59,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/D_VERBOSE /c </AdditionalOptions>
+      <AdditionalOptions>/D__VERBOSE /D__PRINT_ALL  /c </AdditionalOptions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
